transmission (2.92-1) UNRELEASED; urgency=medium

  * New upstream release
  * debian/copyright
    - add copyright/license for my packaging work
    - update upstream copyright years
    - update for new upstream code
  * debian/watch
    - dont run uupdate

 -- Sandro Tosi <morph@debian.org>  Wed, 27 Apr 2016 19:54:05 +0100

transmission (2.84-3) unstable; urgency=medium

  * [6b8bb2a] fix a SIGSEGV due to racing in list node allocation;
    Closes: #808333
  * [40ec5cb] remove libappindicator3-dev from b-d; Closes: #801299
  * [7ceb8fe] Fix black lines to be rendered when scrolling; Closes: #801300

 -- Sandro Tosi <morph@debian.org>  Sat, 02 Jan 2016 17:54:56 +0000

transmission (2.84-2) unstable; urgency=medium

  * upload to unstable

 -- Sandro Tosi <morph@debian.org>  Sun, 02 Aug 2015 18:01:47 +0100

transmission (2.84-1) experimental; urgency=medium

  * Acknowledge NMUs: thanks to Boris Pek, Thomas Goirand, Markus Koschany;
    Closes: #737366, #718624, #754982, #757365, #718624, #734467
  * [323b2ad] Set me as maintaner, Leo as uploader (with Leo's blessing)
  * [3eecf54] removed Bugs field, as it was causing bugs to be sent to upstream;
    Closes: #740944
  * [e5bd0af] drop gconf integration, no longer needed; Closes: #741069,
    #745936, #756823
  * [0432bb4] bump Standards-Version to 3.9.6 (no changes needed)
  * [fd2b694] transition to libsystemd-dev; Closes: #779760

 -- Sandro Tosi <morph@debian.org>  Fri, 10 Apr 2015 11:21:31 +0100

transmission (2.84-0.2) unstable; urgency=medium

  * Non-maintainer upload.
  * transmission-daemon.postinst:
    - Change home directory of transmission-daemon to
      /var/lib/transmission-daemon from /home/debian-transmission.
      Thanks to Alex Peters for the report. (Closes: #734467)
    - Disable password authentication for debian-transmission user for
      improved security. Logins with e.g. SSH RSA keys are still possible.
    - Check existence of debian-transmission user with getent passwd