@@ -1,29 +1,29 @@
 --- a/libtransmission/platform-quota.c
 +++ b/libtransmission/platform-quota.c
-@@ -15,7 +15,7 @@
- 
- #ifndef WIN32
+@@ -16,7 +16,7 @@
+ #ifndef _WIN32
+  #include <unistd.h> /* getuid() */
   #include <sys/types.h> /* types needed by quota.h */
 - #if defined(__FreeBSD__) || defined(__OpenBSD__)
 + #if defined(__FreeBSD__) || defined(__OpenBSD__) || defined(__FreeBSD_kernel__)
    #include <ufs/ufs/quota.h> /* quotactl() */
   #elif defined (__NetBSD__)
    #include <sys/param.h>
-@@ -246,7 +246,7 @@ getquota (const char * device)
+@@ -249,7 +249,7 @@ getquota (const char * device)
    int64_t freespace;
    int64_t spaceused;
  
--#if defined(__FreeBSD__) || defined(__OpenBSD__) || defined(SYS_DARWIN)
-+#if defined(__FreeBSD__) || defined(__FreeBSD_kernel__) || defined(__OpenBSD__) || defined(SYS_DARWIN)
+-#if defined(__FreeBSD__) || defined(__OpenBSD__) || defined(__APPLE__)
++#if defined(__FreeBSD__) || defined(__FreeBSD_kernel__) || defined(__OpenBSD__) || defined(__APPLE__)
    if (quotactl(device, QCMD(Q_GETQUOTA, USRQUOTA), getuid(), (caddr_t) &dq) == 0)
      {
  #elif defined(__sun)
-@@ -278,7 +278,7 @@ getquota (const char * device)
+@@ -281,7 +281,7 @@ getquota (const char * device)
            /* No quota enabled for this user */
            return -1;
          }
 -#if defined(__FreeBSD__) || defined(__OpenBSD__)
 +#if defined(__FreeBSD__) || defined(__OpenBSD__) || defined(__FreeBSD_kernel__)
        spaceused = (int64_t) dq.dqb_curblocks >> 1;
- #elif defined(SYS_DARWIN)
+ #elif defined(__APPLE__)
        spaceused = (int64_t) dq.dqb_curbytes;
